still have an issue on mobile about the height

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,32 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
 .app {
 	background-color: #f3f2ef;
 	display: flex;
-	height: 100vh;
+	width: 100%;
+	/* height: 100vh; */
 	flex-direction: column;
 	align-items: center;
 }
 
 .app__body {
 	display: flex;
-	margin-left: 20px;
-	margin-right: 20px;
+	justify-content: center;
 	margin-top: 35px;
-	max-width: 1200px;
+	width: 100%;
+	height: 100vh;
+}
+
+@media (max-width: 865px) {
+	.app {
+		height: 100vh;
+	}
+
+	.app__body {
+		display: inline-block;
+		flex-direction: column;
+	}
 }
