--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -40,3 +40,13 @@
 .header__right {
 	display: flex;
 }
+
+@media (max-width: 865px) {
+	.header {
+		flex-direction: column;
+		align-items: center;
+	}
+	.header__search {
+		margin-bottom: 10px;
+	}
+}
